2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (is_client_present): New function.
	(comm_terminate): Wait for client to acknowledge termination.

	* src/openvassd.c (handle_client): Remove ntp_keep_communication_alive
	preference handling loop.

	* src/utils.c, src/utils.h (is_client_present): Remove function.

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (comm_send_status): Take socket instead of globals as
	argument.
	(init_host_kb): Don't set unused CURRENTLY_TESTED_HOST globals value.
	(attack_host): Adjust function call.

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/attack.c (error_message_to_client, report_kb_failure)
	(apply_source_iface_preference, check_kb_access): Take socket as
	argument, instead of globals arglist.
	(init_host_kb, attack_network): Adjust functions calls.
	(attack_start): Don't set unused confirm value.

	* src/ntp.c (ntp_long_attack): Take socket as argument.
	(ntp_parse_input): Adjust function call.

	* src/otp.h: Remove unused function header.

	* src/pluginlaunch.c (running): Remove unused globals element.
	(plugin_launch): Don't set globals element.

	* src/utils.c (auth_send): Remove unused confirm parameter.
	(send_printf): Adjust function call.
	(auth_printf): Remove unused function.

	* src/utils.h: Remove function prototype.

2015-03-27  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (comm_terminate, send_plug_info, plugin_send_infos)
	(comm_send_pluginlist, comm_send_preference, comm_setup_plugins)
	(comm_send_nvt_infos): Take socket as argument, instead of globals
	arglist. Call send_printf() instead of auth_printf() and adjust
	functions calls.

	* src/comm.h: Adjust and remove functions prototypes.

	* src/ntp.c (ntp_parse_input, ntp_read_prefs, __ntp_timestamp_scan)
	(ntp_timestamp_host_scan_starts, ntp_timestamp_host_scan_ends)
	(__ntp_timestamp_scan_host): Take socket as argument, instead of globals